# convROS_agent

./: .gitignore  LICENSE  README.md
convros_bot/: package.xml  setup.cfg  setup.py
convros_bot/config/: config.yaml
convros_bot/convros_bot/: conversation_action.py  list_microphones.py  question_response_action.py  recognizeSpeech.py  speechRecognizer_main.py  speech_processor copy.py  speech_processor.py  stt_node.py  stt_node_light.py  tts_main.py  tts_node.py  tts_node_pyttsx3.py  weatherFetch.py
convros_bot/launch/: convros_bot.launch.py  question_response_action.launch.py
convros_interfaces/: CMakeLists.txt  package.xml
convros_interfaces/action/: ConversationRequest.action  QuestionResponseRequest.action
